QPID-2886: correct issues highlighted by running FindBugs across the codebase.
Applied patch from Sorin Suciu<ssuciu@gmail.com>


git-svn-id: https://svn.apache.org/repos/asf/qpid/branches/0.5.x-dev@1001790 13f79535-47bb-0310-9956-ffa450edef68